--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
-            <i class="fa fa-shoping-cart fa-2x mr-5 text-dark" aria-hidden="true"></i>
+            <i class="fa fa-shopping-cart fa-2x mr-5 text-dark" aria-hidden="true"></i>
             <div class="cart-no">5</div>
         </a>
         <a href="#" class="btn btn-outline-secondary mr-2">Login</a>
