--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -10,20 +10,17 @@
 
             <h5 class="text-warning">Brands</h5>
             <ul class="list-group">
-                <li class="list-group-item active">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Morbi leo risus</li>
-                <li class="list-group-item">Porta ac consectetur ac</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item" *ngFor = "let brand of brands">
+                    {{ brand.name }}
+                </li>
               </ul>
 
               <h5 class="text-warning">Types</h5>
               <ul class="list-group my-3">
-                <li class="list-group-item active">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Morbi leo risus</li>
-                <li class="list-group-item">Porta ac consectetur ac</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item" *ngFor = "let type of Types">
+                    {{type.name}}
+                </li>
+                
               </ul>
         </section>
 
