--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -47,6 +47,16 @@
                     <app-product-item [product] = "item"></app-product-item>
                 </div>
             </div>
+            <div class="d-flex justify-content-center mt-2">
+                <pagination 
+                    [boundaryLinks]="true" 
+                    [totalItems]="77"
+                    previousText="&lsaquo;" 
+                    nextText="&rsaquo;"  
+                    firstText="&laquo;"
+                    lastText="&raquo;">
+                </pagination>
+            </div>
         </section>
     </div>
 </div>
