--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -12,7 +12,7 @@
             <h5 class="text-warning">Brands</h5>
             <ul class="list-group">
                 <li class="list-group-item" *ngFor = "let brand of brands"
-                [class.active] = "brand.id === this.brandIdSelected"
+                [class.active] = "brand.id === this.shopParams.brandId"
                 [value] = "brand.id"
                 (click)="onBrandIdSelected(brand.id)">
                     {{ brand.name }}
@@ -22,7 +22,7 @@
               <h5 class="text-warning">Types</h5>
               <ul class="list-group my-3">
                 <li class="list-group-item" *ngFor = "let type of Types"
-                [class.active] = "type.id === this.typeIdSelected"
+                [class.active] = "type.id === this.shopParams.typeId"
                 [value] = "type.id"
                 (click)="onTypeIdSelected(type.id)">
                     {{type.name}}
@@ -50,7 +50,7 @@
             <div class="d-flex justify-content-center mt-2">
                 <pagination 
                     [boundaryLinks]="true" 
-                    [totalItems]="77"
+                    [totalItems]="this.shopParams.totalCount"
                     previousText="&lsaquo;" 
                     nextText="&rsaquo;"  
                     firstText="&laquo;"
