Pagination component a shared component

--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -33,24 +33,11 @@
 
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-                <header>
-                    <span *ngIf = "this.shopParams.totalCount && this.shopParams.totalCount > 0">
-                        Showing 
-                        <strong>
-                            {{ (this.shopParams.pageNumber - 1) * this.shopParams.pageSize + 1 }}
-                            - {{ this.shopParams.pageNumber * this.shopParams.pageSize
-                                > this.shopParams.totalCount
-                                ? this.shopParams.totalCount
-                                : this.shopParams.pageNumber * this.shopParams.pageSize
-                              }}
-                        </strong>
-                         of <strong> {{ this.shopParams.totalCount }} </strong> Results
-                    </span>
-
-                    <span *ngIf = "this.shopParams.totalCount == 0">
-                        There are <strong>0</strong> results for this filter
-                    </span>
-                </header>
+                <app-paging-header
+                [totalCount] = "this.shopParams.totalCount"
+                [pageSize] = "this.shopParams.pageSize"
+                [pageNumber] = "this.shopParams.pageNumber">
+                </app-paging-header>
                 <div class="form-inline mt-2">
                     <input class="form-control mr-2" style="width: 300px;" placeholder="Search..." />
                     <Button class="btn btn-outline-primary my-2">Search</Button>
