--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -39,9 +39,9 @@
                 [pageNumber] = "this.shopParams.pageNumber">
                 </app-paging-header>
                 <div class="form-inline mt-2">
-                    <input class="form-control mr-2" style="width: 300px;" placeholder="Search..." />
-                    <Button class="btn btn-outline-primary my-2">Search</Button>
-                    <Button class="btn btn-outline-success ml-1 my-2">Reset</Button>
+                    <input (keyup.enter)='onSearch()' class="form-control mr-2" #search style="width: 300px;" placeholder="Search..." />
+                    <Button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</Button>
+                    <Button (click)="onReset()" class="btn btn-outline-success ml-1 my-2">Reset</Button>
                 </div>
             </div>
             <div class="row">
