--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -5,7 +5,9 @@
       [routerLinkActiveOptions] = "{exact: true}">Home</a>
       <a class="p-2" [routerLink]="['/shop']" routerLinkActive="active"
       [routerLinkActiveOptions] = "{exact: true}">Shop</a>
-      <a class="p-2 text-dark" [routerLink]="['/contact']">Contact</a>
+      <a class="p-2" [routerLink]="['/test-errors']" 
+      routerLinkActive="active"
+      [routerLinkActiveOptions] = "{exact: true}">Errors</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
